fixed alignment of search bar

--- a/Dmart/style.css
+++ b/Dmart/style.css
@@ -16,7 +16,7 @@ i{
     color: #26A541;
 }
 .time{
-    margin-right: 40px;
+    margin-right: 2%;
 }
 #home-del{
     color: #26A541;
@@ -37,13 +37,20 @@ i{
     margin-right: 5px;
 }
 .search{
-   width: 350px;
+    width: 0;
    border: 2px solid rgb(194, 193, 193);
    padding: 8px;
    background-color: #f5f5f5;
    border-top-left-radius: 5px;
+   flex: 1;
    border-bottom-left-radius: 5px;
 }
+    .middle-sec {
+        flex: 1;
+        display: flex;
+        margin-right: 7%;
+      }
+
 .search:focus{
    outline: none;
 }
@@ -59,14 +66,14 @@ i{
     border-radius: 5px;
 }
 .login-part{
-    margin-left: 100px;
     font-size: 15px;
 }
 .login-part:hover{
     text-decoration: underline;
 }
 .cart{
-    margin-left: 60px;
+    margin-left: 4%;
+    float: right;
 }
 .cart>div>i{
     font-size: 30px;
@@ -77,12 +84,16 @@ i{
 .head{
     border-bottom: 1px solid rgb(192, 192, 192);
     background-color: white;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 nav{
     border-bottom: 1px solid rgb(192, 192, 192);
 }
 .cart-icon{
     position: relative;
+    right: 0;
     font-size: 11px;
 }
 .cart-count{
@@ -96,9 +107,6 @@ nav{
     color: rgb(66, 66, 66) ;
     border-bottom: 1px solid rgb(192, 192, 192);
     padding: 10px 0px 10px 0px;
-}
-.d-flex{
-    flex-wrap: wrap;
 }
 .section1-abdulla>span{
     padding: 0px 30px 0px 10px;
@@ -133,6 +141,15 @@ nav{
     border: 1px solid rgb(204, 204, 204);
     margin: 30px;
     border-radius: 5px;
+    position: relative;
+  }
+  .section3-abdulla>button{
+    position: absolute;
+    right: 17px;
+    top: 43%;
+    background-color: white;
+    border: 1px solid rgb(216, 216, 216);
+    padding: 20px 10px 20px 10px;
   }
   .cat {
     font-weight: 500;
@@ -147,7 +164,7 @@ nav{
   }
   .section4-abdulla{
     background-color: white;
-    padding: 30px;
+    padding: 30px 18px 30px 30px;
     border: 1px solid rgb(204, 204, 204);
     margin: 30px;
     border-radius: 5px;
